--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -15,6 +15,11 @@ jobs:
           # Fetch all history for all branches and tags
           fetch-depth: 0
 
+      - name: Configure Git
+        run: |
+          git config --global user.email "action@github.com"
+          git config --global user.name "GitHub Action"
+
       - name: Add upstream remote
         run: |
           git remote add upstream https://github.com/spliit-app/spliit.git
