Add automatic trigger of docker image build if src/ is modified

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -7,6 +7,9 @@ on:
     paths:
       - 'Dockerfile'
       - 'src/**'
+  repository_dispatch:
+    types:
+      - upstream_sync
   workflow_dispatch:
 
 jobs:
