--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -35,3 +35,22 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: main
           force: true
+
+      - name: Check for relevant changes
+        id: check_changes
+        run: |
+          # Check if any files in src/ or Dockerfile changed
+          if git diff --name-only HEAD~1 HEAD | grep -E '^(src/|Dockerfile)'; then
+            echo "relevant_changes=true" >> $GITHUB_OUTPUT
+          else
+            echo "relevant_changes=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Trigger Docker build
+        if: steps.check_changes.outputs.relevant_changes == 'true'
+        run: |
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/dispatches \
+            -d '{"event_type":"upstream_sync","client_payload":{"ref":"${{ github.ref }}"}}'
